PROJECT(itkbench)
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
    if(COMMAND cmake_policy)
      cmake_policy(SET CMP0003 OLD)
    endif(COMMAND cmake_policy)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/argtable)
FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
 MESSAGE(FATAL_ERROR
        "Cannot build without ITK.  Please set ITK_DIR.")
ENDIF(ITK_FOUND)

ADD_EXECUTABLE(itkbench itkbench.cxx itkmodTimeProbeCollector.cxx itkmodTimeProbeCollector.h)
TARGET_LINK_LIBRARIES ( itkbench  ${ITK_LIBRARIES})
